crates/harnx-tui/src/snapshots/harnx_tui__tests__sub_agent_activity_dedup_final.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered_final
---
I'll look into that for you. Delegating now.

→ researcher_session_prompt
message: investigate the data
> researcher ▸ research-session-1
<think>Let me analyze the situation carefully.</think>
→ bash
command: find /data -name '*.csv'
→ read_file
path: /data/results.csv
<think>Now I see the pattern in the data.</think>
→ write_file
path: /data/summary.md
Here are my findings: the data shows a clear trend.

Based on the research, the data clearly shows an upward trend.











• 🤖  coordinator ▸ mock:mock-model ▸ dedup-test-session
