crates/harnx-tui/src/snapshots/harnx_tui__tests__sub_agent_heading_transitions_in_tui.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx [VERSION]  •  Type .help for commands, Tab to complete.
Top-level assistant opening response.

> argus ▸ session-1
sub-agent tool call
sub-agent follow-up output
> hephaestus ▸ session-2
other sub-agent output
Top-level assistant closes response.






• 🤖  main-agent ▸ main-session
