crates/harnx-tui/src/snapshots/harnx_tui__tests__submitted_message_with_text_attachment.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx 0.30.1  •  Type .help for commands, Tab to
complete.
> check this file

Attachments (1):
  - notes.txt
      Line 1 of notes
      Line 2 of notes
Got it, thanks!






• Input
