crates/harnx-tui/src/snapshots/harnx_tui__tests__tall_multiline_input.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx 0.30.1  •  Type .help
for commands, Tab to complete.




• Input
First line
Second line
Third line
Fourth line
