crates/harnx-tui/src/snapshots/harnx_tui__tests__thinking_stream_coalescing_around_tool_calls.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx [VERSION]  •  Type .help for commands, Tab to complete.
> argus ▸ session-1
<think>thinking before tool</think>
→ argus_session_prompt
message: delegate
<think>thinking after tool</think>









• 🤖  coordinator ▸ mock:mock-model ▸ coalescing-test
