crates/harnx-tui/src/snapshots/harnx_tui__tests__tool_call_with_seq_number.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx [VERSION]  •  Type .help for commands, Tab to complete.
  [7]
→ read
path: /tmp/foo.txt

















• Input
