crates/harnx-tui/src/snapshots/harnx_tui__tests__user_text_with_seq_number.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx [VERSION]  •  Type .help for commands, Tab to complete.
> hello world  [3]



















• Input
